2010-02-02  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda-auth.7.xml: reduce circular references

2010-02-01  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer.pm: add a :constants tag, clean up POD

2010-01-31  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Never return SLOT_UNKNOWN.

2010-01-30  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Allow multiple scripts on one line.

2010-01-29 Dan Locks <dwlocks@zmanda.com>
	*  packaging/rpm/amanda.spec: move manpages to
	   defattr(644,root,root,..) section

2010-01-29  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/DB/Catalog.pm: inculde dumps on holding
	* installcheck/Amanda_DB_Catalog.pl: tests
	* perl/Amanda/Recovery/Planner.pm: plan for dumps on holding
	* installcheck/Amanda_Recovery_Planner.pl: tests
	* perl/Amanda/Recovery/Clerk.pm: recover from holding with
	  Amanda::Xfer::Source::Holding when appropriate
	* installcheck/Amanda_Recovery_Clerk.pl: tests
	* server-src/amfetchdump.pl: give better messaging when recovering
	  from holding, don't append partnum unless it's a multipart dump
	* installcheck/amfetchdump.pl: tests

2010-01-29  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amfetchdump.8.xml: remove amfetchdump -s, -b,
	  and -w options
	* restore-src/Makefile.am restore-src/amfetchdump.c: remove
	* server-src/Makefile.am server-src/amfetchdump.pl: new version
	  of amfetchdump that uses Clerk and Planner
	* installcheck/amfetchdump.pl: updates to tests (change 'tape'
	  to 'volume', no more -b, add quotes around labels

2010-01-29  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Makefile.am perl/Amanda/Recovery/Planner.pm: new package
	* installcheck/Amanda_Recovery_Planner.pl
	  installcheck/Makefile.am: tests

2010-01-29  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Makefile.am perl/Amanda/Recovery/Clerk.pm: new perl module
	* installcheck/Makefile.am installcheck/Amanda_Recovery_Clerk.pl: